--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "jotai": "^2.6.0",
+    "md5": "^2.3.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
