--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.15.0",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.2",
     "jotai": "^2.6.0",
