--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "md5": "^2.3.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@swc-jotai/react-refresh": "^0.1.0",
